@startuml
'https://plantuml.com/class-diagram

class PaymentProvider{
+process_payment()
}

class ExternalPaymentProvider{
+make_payment()
}
class ExternalPaymentProviderAdapter{
- external_payment_provider
+ process_payment()
}

class PaymentProcessor{
+ process_payment()
}
ExternalPaymentProvider - ExternalPaymentProviderAdapter
PaymentProvider	<--(ExternalPaymentProvider,ExternalPaymentProviderAdapter)
ExternalPaymentProviderAdapter<-- PaymentProcessor
@enduml